// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`historyCreateAction() - returns action created when history/address_bar chanages 1`] = `
Object {
  "meta": Object {
    "location": Object {
      "backNext": true,
      "current": Object {
        "pathname": "/info/foo",
        "payload": Object {
          "param": "foo",
        },
        "type": "INFO_PARAM",
      },
      "history": Object {
        "entries": Array [
          "/",
        ],
        "index": 0,
        "length": 1,
      },
      "load": undefined,
      "prev": Object {
        "pathname": "/prev",
        "payload": Object {},
        "type": "PREV",
      },
      "redirect": undefined,
    },
  },
  "payload": Object {
    "param": "foo",
  },
  "type": "INFO_PARAM",
}
`;

exports[`middlewareCreateAction() - [action not matched to any routePath] 1`] = `
Object {
  "meta": Object {
    "location": Object {
      "backNext": undefined,
      "current": Object {
        "pathname": "/prev",
        "payload": Object {
          "someKey": "foo",
        },
        "type": "@@pure-redux-router/NOT_FOUND",
      },
      "history": Object {
        "entries": Array [
          "/",
          "/prev",
        ],
        "index": 1,
        "length": 2,
      },
      "load": undefined,
      "prev": Object {
        "pathname": "/prev",
        "payload": Object {},
        "type": "PREV",
      },
      "redirect": undefined,
    },
  },
  "payload": Object {
    "someKey": "foo",
  },
  "type": "@@pure-redux-router/NOT_FOUND",
}
`;

exports[`middlewareCreateAction() - returns action created when middleware detects connected/matched action.type 1`] = `
Object {
  "meta": Object {
    "location": Object {
      "backNext": undefined,
      "current": Object {
        "pathname": "/info/foo",
        "payload": Object {
          "param": "foo",
        },
        "type": "INFO_PARAM",
      },
      "history": Object {
        "entries": Array [
          "/",
          "/info/foo",
        ],
        "index": 1,
        "length": 2,
      },
      "load": undefined,
      "prev": Object {
        "pathname": "/prev",
        "payload": Object {},
        "type": "PREV",
      },
      "redirect": undefined,
    },
  },
  "payload": Object {
    "param": "foo",
  },
  "type": "INFO_PARAM",
}
`;
